feat (#23) : 프론트 페이지 추가 수정

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -56,29 +56,38 @@
 
     <div class="justify-content-center px-3 mb-5">
       <div class="container my-3 d-flex flex-column align-items-center">
-        <div
-          id="content-title"
-          class="col-12 d-flex justify-content-center"
-        ></div>
-        <div id="recipe-container" class="row justify-content-center"></div>
+        <div id="content-title" class="row justify-content-center"></div>
+      </div>
+      <div class="px-3 mb-4 container">
+        <section class="my-3 justify-content-center align-items-center">
+          <div
+            id="recipe-container"
+            class="d-flex justify-content-center row"
+          ></div>
+        </section>
       </div>
     </div>
 
-    <footer class="text-center py-4 mt-auto" style="background-color: #d1e7dc">
-      <p>&copy; 2023 Recipetory</p>
-      <p>
-        <a href="https://github.com/f-lab-edu/recipetory" style="color: #0c432a"
-          >BuchuKim</a
-        >
-      </p>
-    </footer>
+    <footer
+      class="text-center py-4 mt-auto"
+      id="footer"
+      style="background-color: #d1e7dc"
+    ></footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/view/js/auth.js"></script>
     <script src="/view/js/build-menu.js"></script>
     <script src="/view/js/recipe-list-card.js"></script>
     <script src="/view/js/build-tag.js"></script>
+    <script src="/view/js/build-footer.js"></script>
+    <script>
+      (async () => {
+        const auth = await getAuth();
+        buildMenu(auth);
+      })();
+    </script>
     <script>
       axios
         .get("/recipes/featured")
