--- a/src/main/resources/static/recipe-search.html
+++ b/src/main/resources/static/recipe-search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -64,14 +64,11 @@
       </div>
     </div>
 
-    <footer class="text-center py-4 mt-auto" style="background-color: #d1e7dc">
-      <p>&copy; 2023 Recipetory</p>
-      <p>
-        <a href="https://github.com/f-lab-edu/recipetory" style="color: #0c432a"
-          >BuchuKim</a
-        >
-      </p>
-    </footer>
+    <footer
+      class="text-center py-4 mt-auto"
+      style="background-color: #d1e7dc"
+      id="footer"
+    ></footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script
@@ -84,9 +81,19 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="/view/js/build-footer.js"></script>
+    <script src="/view/js/auth.js"></script>
     <script src="/view/js/build-menu.js"></script>
-    <script src="/view/js/recipe-list-card.js"></script>
+    <script src="/view/js/recipe.js"></script>
+    <script src="/view/js/build-reply.js"></script>
     <script src="/view/js/build-tag.js"></script>
+    <script src="/view/js/recipe-list-card.js"></script>
+    <script>
+      (async () => {
+        const auth = await getAuth();
+        buildMenu(auth);
+      })();
+    </script>
     <script>
       const params = new URLSearchParams(window.location.search);
       document.querySelector("#q").value = params.get("q");
