--- a/src/main/resources/static/recipe-show.html
+++ b/src/main/resources/static/recipe-show.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -58,9 +58,10 @@
           <div class="col-md-8 col-lg-6">
             <div class="card" id="recipe-card">
               <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center">
                   <h2 class="card-title" id="recipe-title"></h2>
-                  <div>
+                  <span id="author" class="ms-1"></span>
+                  <div class="ms-auto">
                     <p class="badge text-bg-success">
                       조회수 : <span id="view-count"></span>
                     </p>
@@ -95,24 +96,24 @@
                 ></ol>
 
                 <div class="card-body d-flex">
-                  <div class="ms-auto">
+                  <div class="ms-auto d-flex">
                     <button
                       type="button"
-                      class="btn btn-outline-success btn-sm"
+                      class="btn btn-outline-success btn-sm ms-1"
                       onclick="addComment()"
                     >
                       댓글 보기
                     </button>
                     <button
                       type="button"
-                      class="btn btn-outline-success btn-sm"
+                      class="btn btn-outline-success btn-sm ms-1"
                       onclick="addReview()"
                     >
                       리뷰 보기
                     </button>
                     <button
                       type="button"
-                      class="btn btn-outline-success btn-sm"
+                      class="btn btn-outline-success btn-sm ms-1"
                       data-bs-toggle="modal"
                       data-bs-target="#commentModal"
                     >
@@ -120,12 +121,33 @@
                     </button>
                     <button
                       type="button"
-                      class="btn btn-outline-success btn-sm"
+                      class="btn btn-outline-success btn-sm ms-1"
                       data-bs-toggle="modal"
                       data-bs-target="#reviewModal"
                     >
                       리뷰 작성
                     </button>
+                    <div class="btn-group" id="">
+                      <button
+                        class="btn btn-outline-success btn-sm dropdown-toggle mx-1"
+                        type="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false"
+                      >
+                        추가 기능
+                      </button>
+                      <ul class="dropdown-menu" id="additional-menu">
+                        <li>
+                          <button
+                            class="dropdown-item"
+                            type="submit"
+                            onclick="addBookMark()"
+                          >
+                            북마크 추가
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -247,14 +269,11 @@
       </div>
     </div>
 
-    <footer class="text-center py-4 mt-auto" style="background-color: #d1e7dc">
-      <p>&copy; 2023 Recipetory</p>
-      <p>
-        <a href="https://github.com/f-lab-edu/recipetory" style="color: #0c432a"
-          >BuchuKim</a
-        >
-      </p>
-    </footer>
+    <footer
+      class="text-center py-4 mt-auto"
+      style="background-color: #d1e7dc"
+      id="footer"
+    ></footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script
@@ -267,6 +286,14 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="/view/js/build-footer.js"></script>
+    <script src="/view/js/auth.js"></script>
+    <script src="/view/js/build-menu.js"></script>
+    <script src="/view/js/recipe.js"></script>
+    <script src="/view/js/build-reply.js"></script>
+    <script src="/view/js/build-tag.js"></script>
+    <script src="/view/js/bookmark.js"></script>
+    <script src="/view/js/recipe-detail-card.js"></script>
     <script>
       (() => {
         "use strict";
@@ -290,10 +317,15 @@
         });
       })();
     </script>
-    <script src="/view/js/build-menu.js"></script>
-    <script src="/view/js/build-reply.js"></script>
-    <script src="/view/js/build-tag.js"></script>
     <script>
+      (async () => {
+        const auth = await getAuth();
+        buildMenu(auth);
+        buildRecipeDetailCard(auth);
+      })();
+    </script>
+    <script>
+      // comment, review 보기
       const path = window.location.pathname.split("/");
       const recipeId = path[path.length - 1];
 
@@ -303,92 +335,6 @@
       const addReview = () => {
         buildReviewsOfRecipe(recipeId);
       };
-    </script>
-    <script>
-      const createStepElement = (step) => {
-        const li = document.createElement("li");
-        li.classList.add("list-group-item", "d-flex");
-
-        const content = document.createElement("div");
-        content.classList.add("ms-2", "me-auto");
-        content.textContent = step.description;
-
-        li.appendChild(content);
-        return li;
-      };
-      const createIngredientElement = (ingredient) => {
-        const li = document.createElement("li");
-        li.classList.add(
-          "list-group-item",
-          "d-flex",
-          "justify-content-between",
-          "align-items-start"
-        );
-
-        const name = document.createElement("div");
-        name.classList.add("ms-1", "me-auto");
-        name.textContent = ingredient.name;
-
-        const amount = document.createElement("div");
-        amount.classList.add("me-1");
-        amount.textContent = ingredient.amount;
-
-        li.append(name, amount);
-        return li;
-      };
-
-      axios
-        .get("/recipes/" + recipeId)
-        .then(function (response) {
-          const recipe = response.data;
-          const recipeInfo = recipe.information;
-          const recipeStatistics = recipe.statistics;
-
-          // title
-          document.querySelector("#recipe-title").textContent = recipe.title;
-
-          // recipeInfo
-          document.querySelector("#recipe-description").textContent =
-            recipeInfo.description;
-          document.querySelector("#cooking-time").textContent =
-            recipeInfo.cookingTime;
-          document.querySelector("#difficulty").textContent =
-            recipeInfo.difficulty;
-          document.querySelector("#serving").textContent = recipeInfo.serving;
-
-          // recipeStatistics
-          document.querySelector("#view-count").textContent =
-            recipeStatistics.viewCount;
-          document.querySelector("#rating").textContent =
-            recipeStatistics.ratings / 10.0;
-
-          // tags
-          const tagSection = document.querySelector("#tags");
-          recipe.tags.forEach((tag) => {
-            tagSection.appendChild(getTagElement(tag));
-          });
-
-          // ingredients
-          const ingredientSection = document.querySelector("#ingredients");
-          recipe.ingredients.forEach((ingredient) => {
-            ingredientSection.appendChild(createIngredientElement(ingredient));
-          });
-
-          // steps
-          const stepSection = document.querySelector("#steps");
-          recipe.steps.forEach((step) => {
-            stepSection.appendChild(createStepElement(step));
-          });
-        })
-        .catch(function (error) {
-          if (error.response.status === 404) {
-            alert("존재하지 않는 레시피입니다!");
-            const recipeCard = document.querySelector("#recipe-card");
-            recipeCard.remove();
-          } else {
-            console.log("error fetching data : ", error);
-          }
-        });
     </script>
     <script>
       // reply forms
