--- a/src/main/resources/static/user-show.html
+++ b/src/main/resources/static/user-show.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -53,27 +53,52 @@
       </div>
     </header>
 
-    <div class="justify-content-center px-3 mb-5">
-      <section class="container my-3 d-flex flex-column align-items-center">
-        <div id="content-container" class="col-8 col-lg-6"></div>
-      </section>
+    <div class="justify-content-center px-3 my-4 row">
+      <div id="user-container" class="col-8 col-lg-6"></div>
     </div>
 
     <div class="justify-content-center px-3 mb-5">
       <section class="container my-3 d-flex flex-column align-items-center">
-        <div id="content-title"></div>
-        <div id="recipe-container" class="row justify-content-center"></div>
+        <ul class="nav nav-underline nav-fill mx-3">
+          <li class="nav-item mx-4">
+            <button
+              class="nav-link"
+              style="color: #0c432a"
+              aria-current="page"
+              type="button"
+              onclick="showRecipeList()"
+            >
+              <h3>작성 레시피</h3>
+            </button>
+          </li>
+          <li class="nav-item mx-4">
+            <button
+              class="nav-link"
+              style="color: #0c432a"
+              aria-current="page"
+              type="button"
+              onclick="showBookMarkList()"
+            >
+              <h3>북마크함</h3>
+            </button>
+          </li>
+        </ul>
       </section>
+      <div class="px-3 mb-4 container">
+        <section class="my-3 justify-content-center align-items-center">
+          <div
+            id="content-container"
+            class="d-flex justify-content-center row"
+          ></div>
+        </section>
+      </div>
     </div>
 
-    <footer class="text-center py-4 mt-auto" style="background-color: #d1e7dc">
-      <p>&copy; 2023 Recipetory</p>
-      <p>
-        <a href="https://github.com/f-lab-edu/recipetory" style="color: #0c432a"
-          >BuchuKim</a
-        >
-      </p>
-    </footer>
+    <footer
+      class="text-center py-4 mt-auto"
+      style="background-color: #d1e7dc"
+      id="footer"
+    ></footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script
@@ -86,38 +111,46 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="/view/js/build-footer.js"></script>
+    <script src="/view/js/auth.js"></script>
     <script src="/view/js/build-menu.js"></script>
+    <script src="/view/js/recipe.js"></script>
+    <script src="/view/js/build-reply.js"></script>
+    <script src="/view/js/build-tag.js"></script>
+    <script src="/view/js/bookmark.js"></script>
+    <script src="/view/js/recipe-list-card.js"></script>
+    <script>
+      (async () => {
+        const auth = await getAuth();
+        buildMenu(auth);
+      })();
+    </script>
+    <script>
+      const userParams = window.location.pathname.split("/");
+      const userId = userParams[userParams.length - 1];
+      var authorRecipes = undefined;
+      var bookMarkRecipes = undefined;
+    </script>
     <script>
       const createUserCard = (user) => {
         const card = document.createElement("div");
-        card.classList.add("card", "mb-3");
-
-        const cardBody = document.createElement("div");
-        cardBody.classList.add("card-body");
-
-        const name = document.createElement("h5");
-        name.textContent = user.name;
-        name.classList.add("card-title");
-
-        const bio = document.createElement("p");
-        bio.classList.add("card-text");
-        bio.textContent = user.bio;
-
-        cardBody.appendChild(name);
-        cardBody.appendChild(bio);
-
-        card.appendChild(cardBody);
-
+        card.classList.add("card", "mb-2");
+        card.innerHTML = `
+          <div class="card-body">
+            <h5 class="card-title">
+              ${user.name}
+            </h5>
+            <p class="card-text">${user.bio}</p>
+          </div>
+        `;
         return card;
       };
 
-      const userParams = window.location.pathname.split("/");
-      const userId = userParams[userParams.length - 1];
       axios
         .get("/" + userId)
         .then(function (response) {
           const user = response.data;
-          const container = document.querySelector("#content-container");
+          const container = document.querySelector("#user-container");
 
           const userCard = createUserCard(user);
           container.appendChild(userCard);
@@ -130,20 +163,14 @@
           }
         });
     </script>
-    <script src="/view/js/recipe-list-card.js"></script>
     <script>
       axios
         .get("/" + userId + "/recipes")
         .then(function (response) {
-          const wrote = document.createElement("h2");
-          wrote.classList.add("mb-4");
-          wrote.textContent = "작성 레시피";
-          document.querySelector("#content-title").appendChild(wrote);
+          authorRecipes = response.data.recipes;
+          const container = document.querySelector("#content-container");
 
-          const recipes = response.data.recipes;
-          const container = document.querySelector("#recipe-container");
-
-          recipes.forEach((recipe) => {
+          authorRecipes.forEach((recipe) => {
             const recipeCard = createRecipeCard(recipe);
             container.appendChild(recipeCard);
           });
@@ -151,6 +178,48 @@
         .catch(function (error) {
           console.log("error fetching data:", error);
         });
+    </script>
+    <script>
+      const showRecipeList = () => {
+        const container = document.querySelector("#content-container");
+        while (container.firstChild) {
+          container.removeChild(container.firstChild);
+        }
+        if (!authorRecipes) {
+          axios
+            .get("/" + userId + "/recipes")
+            .then(function (response) {
+              authorRecipes = response.data.recipes;
+              const container = document.querySelector("#content-container");
+
+              authorRecipes.forEach((recipe) => {
+                const recipeCard = createRecipeCard(recipe);
+                container.appendChild(recipeCard);
+              });
+            })
+            .catch(function (error) {
+              console.log("error fetching data:", error);
+            });
+        }
+        authorRecipes.forEach((recipe) => {
+          const recipeCard = createRecipeCard(recipe);
+          container.appendChild(recipeCard);
+        });
+      };
+
+      const showBookMarkList = async () => {
+        const container = document.querySelector("#content-container");
+        while (container.firstChild) {
+          container.removeChild(container.firstChild);
+        }
+        if (!bookMarkRecipes) {
+          bookMarkRecipes = await getBookMarksOfUser(userId);
+        }
+        bookMarkRecipes.forEach((recipe) => {
+          const recipeCard = createRecipeCard(recipe);
+          container.appendChild(recipeCard);
+        });
+      };
     </script>
   </body>
 </html>
