fix : 프론트 코드 수정 - 404, 401, 500 에러에 대응될 html + 스크립트 파일 - 표시할 자원이 없을 때 존재하지 않음을 명시 - tags 검색에 현재 검색중인 태그가 추가되도록 구성

--- a/src/main/resources/static/error/500.html
+++ b/src/main/resources/static/error/500.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <script>
-      alert("로그인이 필요한 서비스입니다!");
-      window.location.href = "/view/login";
+      alert("서버에 알 수 없는 오류가 발생했습니다.");
+      window.location.href = "/";
     </script>
   </body>
 </html>
