--- a/src/main/resources/static/error/404.html
+++ b/src/main/resources/static/error/404.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <script>
-      alert("로그인이 필요한 서비스입니다!");
-      window.location.href = "/view/login";
+      alert("찾을 수 없는 페이지입니다!");
+      window.location.href = "/";
     </script>
   </body>
 </html>
