--- a/src/main/resources/static/recipe-new.html
+++ b/src/main/resources/static/recipe-new.html
@@ -375,7 +375,8 @@
               window.location.href = "/view/login";
             } else {
               console.log("error! : ", error);
-              alert(error);
+              alert("알 수 없는 오류가 발생했습니다!");
+              window.location.href = "/view/recipes/new";
             }
           });
       });
